--- a/frontend/src/components/CodeTabContent/CodeTabContent.css
+++ b/frontend/src/components/CodeTabContent/CodeTabContent.css
@@ -6,36 +6,36 @@
     justify-content: center;
     text-align: center;
     padding: 100px 30px;
+    box-sizing: border-box;
     
   }
   
   .big-logo {
     max-width: 100%;
     height: auto;
-    margin-bottom: 70px;
   }
 
   .text {
     font-size: 24px;
-    margin-bottom: 30px;
   }
   
-  .button-container {
+  /* .button-container {
     width: 100%;
-  }
+    background-color: red;
+  } */
   
   .purple-button {
     background-color: #444AD4;
+    box-sizing: border-box;
     color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 20px;
-    margin-right: 10px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 90%;
     margin-bottom: 20px;
   }
   
@@ -46,12 +46,13 @@
   
   .outline-purple-button {
     background-color: transparent;
+    box-sizing: border-box;
     color: #444AD4;
     border: 1px solid #444AD4;
     padding: 12.5px 20px;
     border-radius: 20px;
     cursor: pointer;
-    width: 100%;
+    width: 90%;
     font-size: 20px;
     font-weight: bold;
   }
