--- a/frontend/src/components/ConfirmImage/ComfirmImage.css
+++ b/frontend/src/components/ConfirmImage/ComfirmImage.css
@@ -3,12 +3,16 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: space-between;
   }
   
   .main-image {
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
+    max-width: 100%;
+    height: 90%;
+    /* max-height: 80%; */
+
   }
   
   .button-container {
