--- a/frontend/src/components/Tabs/Tabs.css
+++ b/frontend/src/components/Tabs/Tabs.css
@@ -10,6 +10,7 @@
     background-color: #fff;
     color: #333;
     border-bottom: 1px solid #ccc;
+    text-align: center;
   }
   
   .tab.active {
