--- a/frontend/src/components/CodeViewer/CodeViewer.css
+++ b/frontend/src/components/CodeViewer/CodeViewer.css
@@ -96,7 +96,7 @@ input {
 }
 
 .submit-btn {
-  background-color: #ccc;
+  background-color: #444AD4;;
   color: #fff;
   padding: 10px;
   border: none;
@@ -104,8 +104,12 @@ input {
   cursor: pointer;
 }
 
-.submit-btn.active {
-  background-color: #9c27b0; /* Purple background for the active (enabled) button */
+.submit-btn-border {
+  color: #444AD4;
+  padding: 10px;
+  border: 2px solid #444AD4;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .menu-overlay {
@@ -183,6 +187,12 @@ input {
   font-family: 'Inter', sans-serif;
   padding-bottom: 2rem;
   font-size: 1.25rem;
+}
+
+.editing-container {
+  width: 100%;
+  height: 100%;
+  background-color: #333;
 }
 
   
