--- a/frontend/src/pages/SplashPage/SplashPage.css
+++ b/frontend/src/pages/SplashPage/SplashPage.css
@@ -1,4 +1,4 @@
-.container {
+.splash-container {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -35,30 +35,5 @@
     align-items: center;
   }
   
-  button {
-    margin: 10px;
-    padding: 15px 30px;
-    border-radius: 15px;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    width: 80%;
-    margin-bottom: 1rem;
-  }
-  
-  .login-button {
-    background-color: var(--primary-color);
-    color: white;
-  }
-  
-  .signup-button {
-    background-color: transparent;
-    color:  var(--primary-color);
-    border: 1px solid  var(--primary-color);
-  }
-  
-  button:hover {
-    opacity: 0.8;
-  }
+ 
   
